# trainee_assignment

./: .gitignore  README.md  docker-compose.yml  package_submission.py
cli/: README.md  pyproject.toml
cli/src/products_cli/: __init__.py
server/: Dockerfile  README.md  pyproject.toml
server/app/: auth.py  config.py  db.py  dependencies.py  logging_config.py  main.py  schemas.py
server/app/controllers/: auth_controller.py  products_controller.py
server/app/gateways/: event_bus_gateway.py
server/app/repositories/: products_repository.py  user_repository.py
server/app/services/: auth_service.py  auth_token_service.py  products_service.py
server/app/tables/: __init__.py  products.py  users.py
server/tests/: conftest.py  test_auth.py  test_meta.py  test_products_crud.py  test_products_list.py
