[project]
name = "products-cli"
version = "0.1.0"
description = "CLI tool for the Products API assignment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
products-cli = "products_cli:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
