[project]
name = "products-api"
version = "1.0.0"
description = "Reference Products API for the CLI assignment"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "PyJWT==2.8.0",
    "passlib==1.7.4",
    "bcrypt==4.0.1",
    "loguru==0.7.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    # Starlette 0.37.x's TestClient leaves anyio lifespan memory-object streams
    # unclosed, emitting ResourceWarnings. Known upstream issue; ignore it.
    "ignore:Unclosed .*MemoryObject.*:ResourceWarning",
    # Starlette imports the legacy `multipart` module name.
    "ignore:Please use `import python_multipart` instead.:PendingDeprecationWarning",
    # passlib imports the stdlib `crypt` module, deprecated in Python 3.13.
    "ignore:'crypt' is deprecated and slated for removal:DeprecationWarning",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
